# unitree_rl_gym

./: .gitignore  MUJOCO_LOG.TXT  README.md  README_zh.md  h1_isaac_lab_env.py  h1_ppo_config.yaml  isaac_lab_h1_loader.py  run_h1_policy_isaac_lab.py  setup.py  train_h1_isaac_lab.py
deploy/deploy_mujoco/: deploy_go2.py  deploy_mujoco.py  deploy_mujoco_navigation.py
deploy/deploy_mujoco/configs/: g1.yaml  g1_nav.yaml  go2.yaml  h1.yaml  h1_2.yaml
deploy/deploy_real/: README.md  README.zh.md  act_to_dof.py  config.py  deploy_real.py  deploy_real_old.py  deploy_real_ros.py  deploy_real_ros_eetrack.py  deploy_real_ros_ikctrl.py  deploy_real_ros_navigation.py  deploy_real_step.py  deploy_real_step_ros.py  fake_world_tf_pub.py  ikctrl.py  math_utils.py  state_pub.launch.py  state_pub.py  test.py  test_policy.py
deploy/deploy_real/common/: command_helper.py  command_helper_ros.py  crc.py  np_math.py  remote_controller.py  rotation_helper.py  step_command.py  utils.py  xml_helper.py
deploy/deploy_real/configs/: g1.yaml  g1_eetrack.yaml  g1_nav.yaml  g1_old.yaml  h1.yaml  h1_2.yaml  ik.yaml
deploy/deploy_real/cpp_g1/: AtomicLock.h  CMakeLists.txt  Controller.cpp  Controller.h  DataBuffer.h  joystick.h  main.cpp  utilities.cpp  utilities.h
deploy/deploy_real/localization/: pelvis_pub.py  state_pub.launch.py  state_pub.py
doc/: setup_en.md  setup_zh.md
legged_gym/: __init__.py
legged_gym/envs/: __init__.py
legged_gym/scripts/: play.py  train.py
legged_gym/utils/: __init__.py  helpers.py  isaacgym_utils.py  logger.py  math.py  task_registry.py  terrain.py
(+32 files in other folders)
